social media breakage and email not showing fixed

--- a/src/components/ProfilePage/ProfileContactSides/styles.module.css
+++ b/src/components/ProfilePage/ProfileContactSides/styles.module.css
@@ -51,6 +51,7 @@ ul.contact-wrapper svg {
   max-width: 100%;
   overflow: hidden;
   color: #08090A;
+  text-overflow: ellipsis;
 }
 
 .error{
